[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-sdk-bbl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.4",
    "click>=8.3.0",
    "rich>=14.2.0",
]

[project.scripts]
build-idea = "cli.main:build_idea"

[tool.setuptools]
packages = ["agents", "cli"]
